# tests/unit/openapi_snapshot.json
@@ -134,9 +134,9 @@
   },
   "openapi": "3.1.0",
   "paths": {
-    "/healthz": {
+    "/health": {
       "get": {
-        "operationId": "healthz_healthz_get",
+        "operationId": "health_health_get",
         "responses": {
           "200": {
             "content": {
@@ -145,7 +145,7 @@
                   "additionalProperties": {
                     "type": "string"
                   },
-                  "title": "Response Healthz Healthz Get",
+                  "title": "Response Health Health Get",
                   "type": "object"
                 }
               }
@@ -153,7 +153,7 @@
             "description": "Successful Response"
           }
         },
-        "summary": "Healthz"
+        "summary": "Health"
       }
     },
     "/process": {
